--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "markdown-it-footnote": "^3.0.2",
     "markdown-it-for-inline": "^0.1.1",
     "node-fetch": "^2.6.0",
+    "pluralize": "^8.0.0",
     "prop-types": "^15.7.2",
     "query-string": "^5.1.1",
     "react": "^16.13.1",
