--- a/.env.example
+++ b/.env.example
@@ -75,3 +75,5 @@ ZENDESK_TOKEN=
 # Feature Flags
 DS_ENABLE_NPS_SURVEY=
 DS_ENABLE_VOTER_REG_MODAL=
+DS_ENABLE_CAUSE_INTERESTS_PAGE=
+DS_ENABLE_NEW_HOMEPAGE=
