--- a/.env.example
+++ b/.env.example
@@ -77,3 +77,4 @@ DS_ENABLE_NPS_SURVEY=
 DS_ENABLE_VOTER_REG_MODAL=
 DS_ENABLE_CAUSE_INTERESTS_PAGE=
 DS_ENABLE_NEW_HOMEPAGE=
+DS_ENABLE_VOLUNTEER_CREDITS=
