--- a/.env.example
+++ b/.env.example
@@ -71,13 +71,13 @@ ZENDESK_SUBDOMAIN=
 ZENDESK_USERNAME=
 ZENDESK_TOKEN=
 
-
+#
 # Feature Flags
-
+#
 DS_ENABLE_NPS_SURVEY=
 DS_ENABLE_VOTER_REG_MODAL=
 DS_ENABLE_CAUSE_INTERESTS_PAGE=
 DS_ENABLE_NEW_HOMEPAGE=
 DS_ENABLE_VOLUNTEER_CREDITS=
-# If true, override the blocks of /us/campaigns/online-registration-drive with the Alpha Page.
+# If true, overrides the blocks of /us/campaigns/online-registration-drive with the Alpha Page.
 DS_ENABLE_VOTER_REG_ALPHA_PAGE=
