--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "react-addons-update": "^15.6.2",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-error-boundary": "^1.2.5",
     "react-intersection-observer": "^8.25.2",
     "react-loadable": "^5.4.0",
     "react-media": "^1.10.0",
