Set DS_ENABLE_VOTER_REG_ALPHA_PAGE on review apps

--- a/app.json
+++ b/app.json
@@ -60,6 +60,7 @@
     "SIXPACK_TIMEOUT": {
       "required": true
     },
-    "DS_ENABLE_NEW_HOMEPAGE": "true"
+    "DS_ENABLE_NEW_HOMEPAGE": "true",
+    "DS_ENABLE_VOTER_REG_ALPHA_PAGE": "true"
   }
 }
