adding all feature flag env variables

--- a/.env.example
+++ b/.env.example
@@ -71,13 +71,17 @@ ZENDESK_SUBDOMAIN=
 ZENDESK_USERNAME=
 ZENDESK_TOKEN=
 
-#
+# ==============================================================================
 # Feature Flags
-#
-DS_ENABLE_NPS_SURVEY=
-DS_ENABLE_VOTER_REG_MODAL=
+# ==============================================================================
 DS_ENABLE_CAUSE_INTERESTS_PAGE=
+DS_ENABLE_DYNAMIC_CAMPAIGNS_PAGE=
 DS_ENABLE_NEW_HOMEPAGE=
+DS_ENABLE_NPS_SURVEY=
+DS_ENABLE_SITEWIDE_CTA=
+DS_ENABLE_SITEWIDE_NPS_SURVEY=
+DS_ENABLE_SNAPCHAT=
 DS_ENABLE_VOLUNTEER_CREDITS=
-# If true, overrides the blocks of /us/campaigns/online-registration-drive with the Alpha Page.
-DS_ENABLE_VOTER_REG_ALPHA_PAGE=
+DS_ENABLE_VOTER_REG_ALPHA_PAGE= # If true, overrides blocks on /us/campaigns/online-registration-drive with Alpha Page.
+DS_ENABLE_VOTER_REG_DRIVE_TOTAL=
+DS_ENABLE_VOTER_REG_MODAL=
