Adds voter_reg_beta_page feature flag

--- a/.env.example
+++ b/.env.example
@@ -82,3 +82,5 @@ DS_ENABLE_SITEWIDE_CTA=
 DS_ENABLE_SITEWIDE_NPS_SURVEY=
 DS_ENABLE_SNAPCHAT=
 DS_ENABLE_VOLUNTEER_CREDITS=
+DS_ENABLE_VOTER_REG_BETA_PAGE=
+
