--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "@dosomething/babel-preset": "^3.2.0",
     "@dosomething/eslint-config": "^5.0.1",
     "@dosomething/webpack-config": "^6.0.0",
+    "@testing-library/cypress": "^6.0.0",
     "@testing-library/dom": "^7.5.5",
     "@testing-library/jest-dom": "^5.7.0",
     "@testing-library/react": "^10.0.4",
