Add Refer a Friend V2 feature flag

--- a/.env.example
+++ b/.env.example
@@ -81,3 +81,4 @@ DS_ENABLE_NPS_SURVEY=
 DS_ENABLE_SITEWIDE_NPS_SURVEY=
 DS_ENABLE_VOLUNTEER_CREDITS=
 DS_ENABLE_VOTER_REG_BETA_PAGE=
+DS_ENABLE_REFER_FRIENDS_V2=
