--- a/.env.example
+++ b/.env.example
@@ -84,6 +84,6 @@ DS_ENABLE_SITEWIDE_NPS_SURVEY=
 DS_ENABLE_VOLUNTEER_CREDITS=
 
 # ==============================================================================
-# Feature Config
+# Site Config
 # ==============================================================================
 DS_DEFAULT_REFERRAL_CAMPAIGN_ID=
