Site Feature Config Env Variables (#2239)
* Add backend 'feature config' env variable support

* Add featureConfig helper exposing config variables on window.ENV

* Fix typo

* Update feature-config -> site-config https://github.com/DoSomething/phoenix-next/pull/2239#discussion_r447099511

* Rename site config to 'site' https://github.com/DoSomething/phoenix-next/pull/2239#discussion_r447115632

* Update features.php -> feature-flags per https://github.com/DoSomething/phoenix-next/pull/2239#discussion_r447122854

--- a/.env.example
+++ b/.env.example
@@ -82,3 +82,8 @@ DS_ENABLE_NPS_SURVEY=
 DS_ENABLE_REFER_FRIENDS_V2=
 DS_ENABLE_SITEWIDE_NPS_SURVEY=
 DS_ENABLE_VOLUNTEER_CREDITS=
+
+# ==============================================================================
+# Site Config
+# ==============================================================================
+DS_DEFAULT_REFERRAL_CAMPAIGN_ID=
