--- a/.env.example
+++ b/.env.example
@@ -79,6 +79,7 @@ DS_ENABLE_DYNAMIC_CAMPAIGNS_PAGE=
 DS_ENABLE_QUIZ_RESULT_PAGE=
 DS_ENABLE_NEW_HOMEPAGE=
 DS_ENABLE_NPS_SURVEY=
+DS_ENABLE_REFER_FRIENDS_INCENTIVE=
 DS_ENABLE_SITEWIDE_NPS_SURVEY=
 DS_ENABLE_VOLUNTEER_CREDITS=
 
