--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,16 @@
   "require": {
     "php": "~7.3.0",
     "ext-newrelic": "*",
-    "barryvdh/laravel-debugbar": "^2.3",
+    "barryvdh/laravel-debugbar": "^3.0",
     "contentful/contentful": "3.3.*",
     "contentful/laravel": "3.0.*",
     "dfurnes/environmentalist": "^0.0.2",
     "doctrine/dbal": "^2.5",
     "dosomething/gateway": "^1.14.7",
     "erusev/parsedown": "^1.6",
-    "fideloper/proxy": "^3.3",
+    "fideloper/proxy": "^4.0",
     "huddledigital/zendesk-laravel": "^3.2",
-    "laravel/framework": "5.5.*",
+    "laravel/framework": "5.6.*",
     "predis/predis": "^1.1",
     "seatgeek/sixpack-php": "^2.1"
   },
@@ -22,10 +22,10 @@
     "fzaninotto/faker": "~1.4",
     "laravel/tinker": "~1.0",
     "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "~6.0",
-    "symfony/css-selector": "3.1.*",
-    "symfony/dom-crawler": "3.1.*",
-    "laravel/browser-kit-testing": "2.*"
+    "phpunit/phpunit": "^7.0",
+    "symfony/css-selector": "^4.0",
+    "symfony/dom-crawler": "^4.0",
+    "laravel/browser-kit-testing": "4.*"
   },
   "autoload": {
     "classmap": [
