--- a/composer.json
+++ b/composer.json
@@ -5,27 +5,28 @@
     "php": "~7.3.0",
     "ext-newrelic": "*",
     "barryvdh/laravel-debugbar": "^3.0",
-    "contentful/contentful": "3.3.*",
-    "contentful/laravel": "3.0.*",
-    "dfurnes/environmentalist": "^0.0.2",
+    "contentful/contentful": "^6.0",
+    "contentful/laravel": "^7.0",
+    "dfurnes/environmentalist": "0.0.6",
     "doctrine/dbal": "^2.5",
     "dosomething/gateway": "^3.0.0",
     "erusev/parsedown": "^1.6",
     "fideloper/proxy": "^4.0",
     "huddledigital/zendesk-laravel": "^3.2",
-    "laravel/framework": "5.8.*",
+    "laravel/framework": "^6.0",
     "predis/predis": "^1.1",
     "seatgeek/sixpack-php": "^2.1"
   },
   "require-dev": {
-    "filp/whoops": "~2.0",
+    "facade/ignition": "^1.4",
     "fzaninotto/faker": "~1.4",
-    "laravel/tinker": "~1.0",
-    "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "^7.0",
+    "laravel/tinker": "^2.0",
+    "mockery/mockery": "^1.0",
+    "phpunit/phpunit": "^8.0",
     "symfony/css-selector": "^4.0",
     "symfony/dom-crawler": "^4.0",
-    "laravel/browser-kit-testing": "4.*"
+    "nunomaduro/collision": "^3.0",
+    "laravel/browser-kit-testing": "^5.0"
   },
   "autoload": {
     "classmap": [
