--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_DEBUGBAR=false
-APP_LOG=single
-APP_LOG_LEVEL=debug
 APP_URL=http://phoenix.test
+
+LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -15,8 +15,8 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
-CACHE_PREFIX=phoenix_cache
+CACHE_DRIVER=file
+QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
