--- a/composer.json
+++ b/composer.json
@@ -28,45 +28,46 @@
     "nunomaduro/collision": "^3.0",
     "laravel/browser-kit-testing": "^5.0"
   },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true
+  },
+  "extra": {
+    "laravel": {
+      "dont-discover": []
+    }
+  },
   "autoload": {
+    "psr-4": {
+      "App\\": "app/"
+    },
     "classmap": [
       "database"
     ],
     "files": [
       "app/helpers.php"
-    ],
-    "psr-4": {
-      "App\\": "app/"
-    }
+    ]
   },
   "autoload-dev": {
-    "classmap": [
-      "tests/DatabaseSetup.php",
-      "tests/TestCase.php"
-    ],
     "psr-4": {
       "Tests\\": "tests/"
     }
   },
   "scripts": {
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover --ansi"
+    ],
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
     ],
     "post-create-project-cmd": [
-      "@php artisan key:generate"
-    ],
-    "post-autoload-dump": [
-      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-      "@php artisan package:discover"
+      "@php artisan key:generate --ansi"
     ],
     "warmup": [
-      "php artisan gateway:key",
-      "php artisan config:cache"
+      "@php artisan gateway:key",
+      "@php artisan config:cache"
     ]
-  },
-  "config": {
-    "preferred-install": "dist",
-    "sort-packages": true,
-    "optimize-autoloader": true
   }
 }
