--- a/.env.example
+++ b/.env.example
@@ -76,6 +76,7 @@ ZENDESK_TOKEN=
 # ==============================================================================
 DS_ENABLE_CAUSE_INTERESTS_PAGE=
 DS_ENABLE_DYNAMIC_CAMPAIGNS_PAGE=
+DS_ENABLE_HIDE_CAMPAIGNS=
 DS_ENABLE_QUIZ_RESULT_PAGE=
 DS_ENABLE_NEW_HOMEPAGE=
 DS_ENABLE_NPS_SURVEY=
