--- a/.env.example
+++ b/.env.example
@@ -88,3 +88,4 @@ DS_ENABLE_VOLUNTEER_CREDITS=
 # Site Config
 # ==============================================================================
 DS_DEFAULT_REFERRAL_CAMPAIGN_ID=
+DS_HIDE_CAMPAIGN_IDS=
