Hide Campaigns from Website Discovery V1 (#2310)
* Add feature flag to toggle hide campaigns feature

* Add site config to list campaign IDs to hide

* Optionally exclude Group campaigns & configured campaign ID's

* Add documentation

* Update resources/assets/components/utilities/PaginatedCampaignGallery/PaginatedCampaignGallery.js

Co-authored-by: Aaron Schachter <aaronschachter@gmail.com>

* Update resources/assets/components/utilities/PaginatedCampaignGallery/PaginatedCampaignGallery.js

Co-authored-by: Aaron Schachter <aaronschachter@gmail.com>

Co-authored-by: Aaron Schachter <aaronschachter@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -76,6 +76,7 @@ ZENDESK_TOKEN=
 # ==============================================================================
 DS_ENABLE_CAUSE_INTERESTS_PAGE=
 DS_ENABLE_DYNAMIC_CAMPAIGNS_PAGE=
+DS_ENABLE_HIDE_CAMPAIGNS=
 DS_ENABLE_QUIZ_RESULT_PAGE=
 DS_ENABLE_NEW_HOMEPAGE=
 DS_ENABLE_NPS_SURVEY=
@@ -87,3 +88,4 @@ DS_ENABLE_VOLUNTEER_CREDITS=
 # Site Config
 # ==============================================================================
 DS_DEFAULT_REFERRAL_CAMPAIGN_ID=
+DS_HIDE_CAMPAIGN_IDS=
