--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,10 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+.env.backup
 .DS_Store
 
 junit.xml
 npm-debug.log
 /contentful/management-api-scripts/logs
+.phpunit.result.cache
