--- a/composer.json
+++ b/composer.json
@@ -4,68 +4,70 @@
   "require": {
     "php": "~7.3.0",
     "ext-newrelic": "*",
-    "barryvdh/laravel-debugbar": "^2.3",
-    "contentful/contentful": "3.3.*",
-    "contentful/laravel": "3.0.*",
-    "dfurnes/environmentalist": "^0.0.2",
+    "barryvdh/laravel-debugbar": "^3.0",
+    "contentful/contentful": "^6.0",
+    "contentful/laravel": "^7.0",
+    "dfurnes/environmentalist": "0.0.6",
     "doctrine/dbal": "^2.5",
-    "dosomething/gateway": "^1.14.7",
+    "dosomething/gateway": "^3.0.0",
     "erusev/parsedown": "^1.6",
-    "fideloper/proxy": "^3.3",
+    "fideloper/proxy": "^4.0",
     "huddledigital/zendesk-laravel": "^3.2",
-    "laravel/framework": "5.5.*",
+    "laravel/framework": "^6.0",
     "predis/predis": "^1.1",
     "seatgeek/sixpack-php": "^2.1"
   },
   "require-dev": {
-    "filp/whoops": "~2.0",
+    "facade/ignition": "^1.4",
     "fzaninotto/faker": "~1.4",
-    "laravel/tinker": "~1.0",
-    "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "~6.0",
-    "symfony/css-selector": "3.1.*",
-    "symfony/dom-crawler": "3.1.*",
-    "laravel/browser-kit-testing": "2.*"
+    "laravel/tinker": "^2.0",
+    "mockery/mockery": "^1.0",
+    "phpunit/phpunit": "^8.0",
+    "symfony/css-selector": "^4.0",
+    "symfony/dom-crawler": "^4.0",
+    "nunomaduro/collision": "^3.0",
+    "laravel/browser-kit-testing": "^5.0"
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": "dist",
+    "sort-packages": true
+  },
+  "extra": {
+    "laravel": {
+      "dont-discover": []
+    }
   },
   "autoload": {
+    "psr-4": {
+      "App\\": "app/"
+    },
     "classmap": [
       "database"
     ],
     "files": [
       "app/helpers.php"
-    ],
-    "psr-4": {
-      "App\\": "app/"
-    }
+    ]
   },
   "autoload-dev": {
-    "classmap": [
-      "tests/DatabaseSetup.php",
-      "tests/TestCase.php"
-    ],
     "psr-4": {
       "Tests\\": "tests/"
     }
   },
   "scripts": {
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover --ansi"
+    ],
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
     ],
     "post-create-project-cmd": [
-      "@php artisan key:generate"
-    ],
-    "post-autoload-dump": [
-      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-      "@php artisan package:discover"
+      "@php artisan key:generate --ansi"
     ],
     "warmup": [
-      "php artisan gateway:key",
-      "php artisan config:cache"
+      "@php artisan gateway:key",
+      "@php artisan config:cache"
     ]
-  },
-  "config": {
-    "preferred-install": "dist",
-    "sort-packages": true,
-    "optimize-autoloader": true
   }
 }
