--- a/.env.example
+++ b/.env.example
@@ -34,8 +34,7 @@ NORTHSTAR_URL=https://identity-dev.dosomething.org
 NORTHSTAR_AUTHORIZATION_ID=dev-oauth
 NORTHSTAR_AUTHORIZATION_SECRET=
 
-BERTLY_URL=
-BERTLY_API_KEY=
+BERTLY_URL=https://dev.dosome.click
 
 ROGUE_URL=https://activity-dev.dosomething.org
 
