Fixes TODO for context

--- a/.env.example
+++ b/.env.example
@@ -86,5 +86,6 @@ DS_ENABLE_VOLUNTEER_CREDITS=
 # ==============================================================================
 # Site Config
 # ==============================================================================
+DS_CHAPTER_GROUP_TYPE_IDS=
 DS_DEFAULT_REFERRAL_CAMPAIGN_ID=
 DS_HIDE_CAMPAIGN_IDS=
