--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
           key: node-v2-{{ checksum "package-lock.json" }}
           paths:
             - node_modules
+            - ~/.cache/Cypress
       # Build Javacript application.
       - run: GRAPHQL_URL=https://graphql-dev.dosomething.org/graphql npm run build
       # Lint with ESLint & type-check with Flow.
