Fix JawsDB environment variable & rename connector for clarity.
This should be 'JAWSDB_MARIA_URL', not 'JAWS_MARIA_URL'. Since it's
also specific to this particular addon, I've renamed the connection.

--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
     },
     "APP_LOG": "errorlog",
     "APP_URL": "https://ds-phoenix-staging.herokuapp.com/",
-    "DB_CONNECTION": "heroku_mariadb",
+    "DB_CONNECTION": "jawsdb",
     "CONTENTFUL_CACHE": "false",
     "CONTENTFUL_CONTENT_API_KEY": {
       "required": true
