Adds voting_widget_src_url, ContentBlockFooter

--- a/.env.example
+++ b/.env.example
@@ -89,3 +89,4 @@ DS_ENABLE_VOLUNTEER_CREDITS=
 DS_CHAPTER_GROUP_TYPE_IDS=
 DS_DEFAULT_REFERRAL_CAMPAIGN_ID=
 DS_HIDE_CAMPAIGN_IDS=
+DS_VOTING_WIDGET_SRC_URL=
