Changes CivicEngine voting widget embed type to bronze level (iframe) (#2362)
* Adds  config vars for Civic Engine embed levels

* Adds defer property

* Updates comments

* Fixes CivicEngine URL

* Adds width and height per https://github.com/DoSomething/phoenix-next/pull/2362#discussion_r493940600

* Commits to bronze level per https://github.com/DoSomething/phoenix-next/pull/2362#discussion_r494015621

* Update config/site.php

Co-authored-by: Mendel Blesofsky <mendelblesofsky@gmail.com>

Co-authored-by: Mendel Blesofsky <mendelblesofsky@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -86,7 +86,14 @@ DS_ENABLE_VOLUNTEER_CREDITS=
 # ==============================================================================
 # Site Config
 # ==============================================================================
+# Required CivicEngine vars:
+CIVIC_ENGINE_CLIENT_NAME=
+# Optional CivicEngine overrides:
+CIVIC_ENGINE_UTM_SOURCE=
+
 DS_CHAPTER_GROUP_TYPE_IDS=
 DS_DEFAULT_REFERRAL_CAMPAIGN_ID=
 DS_HIDE_CAMPAIGN_IDS=
+
+# This will be deprecated soon
 DS_VOTING_WIDGET_SRC_URL=
