--- a/package.json
+++ b/package.json
@@ -82,9 +82,9 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
-    "apollo-link-batch-http": "^1.2.14",
     "apollo-link-context": "^1.0.20",
     "apollo-link-error": "^1.1.13",
+    "apollo-link-http": "^1.5.17",
     "apollo-link-persisted-queries": "^0.2.2",
     "babel-jest": "^24.9.0",
     "classnames": "^2.2.6",
