Upgrade Testing Library's Cypress plugin & pin DOM dependency.
The 7.26.1 release introduces a bug that prevents tests from running.

--- a/package.json
+++ b/package.json
@@ -147,8 +147,8 @@
     "@dosomething/babel-preset": "^3.2.0",
     "@dosomething/eslint-config": "^5.0.1",
     "@dosomething/webpack-config": "^6.0.0",
-    "@testing-library/cypress": "^6.0.1",
-    "@testing-library/dom": "^7.26.1",
+    "@testing-library/cypress": "^7.0.1",
+    "@testing-library/dom": "7.26.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
     "apollo": "^2.31.0",
