--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "test": "jest --watch",
     "test:ci": "jest --ci --runInBand --reporters=default --reporters=jest-junit",
     "cypress": "cypress open",
-    "cypress:ci": "cypress run -c baseUrl=http://127.0.0.1:8000 --record --reporter cypress-multi-reporters --reporter-options configFile=cypress-report-config.json",
+    "cypress:ci": "cypress run -c baseUrl=http://127.0.0.1:8000 --record --reporter cypress-multi-reporters --reporter-options configFile=cypress-report-config.json --group functional",
     "lint": "eslint --ext .js resources/assets",
     "flow": "flow",
     "start": "npm run schema:fragments && webpack --env=development --hide-modules --watch",
