adds feature flag and adds popover to the sitewidebanner for display vs within various page components

--- a/.env.example
+++ b/.env.example
@@ -82,6 +82,7 @@ DS_ENABLE_REFER_FRIENDS_INCENTIVE=
 DS_ENABLE_SITEWIDE_NPS_SURVEY=
 DS_ENABLE_VOLUNTEER_CREDITS=
 DS_ENABLE_POST_CONFIRMATION_PAGE=
+DS_ENABLE_SITEWIDE_POPOVER_CTA=
 
 # ==============================================================================
 # Site Config
