--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "test": "jest --watch",
     "test:ci": "jest --ci --runInBand --reporters=default --reporters=jest-junit",
     "cypress": "cypress open",
-    "cypress:ci": "cypress run -c baseUrl=http://127.0.0.1:8000 --record --reporter cypress-multi-reporters --reporter-options configFile=cypress-report-config.json",
+    "cypress:ci": "cypress run -c baseUrl=http://127.0.0.1:8000 --record --reporter cypress-multi-reporters --reporter-options configFile=cypress-report-config.json --group functional",
     "lint": "eslint --ext .js resources/assets",
     "flow": "flow",
     "start": "npm run schema:fragments && webpack --env=development --hide-modules --watch",
@@ -67,24 +67,24 @@
     "testURL": "http://localhost"
   },
   "dependencies": {
-    "@apollo/react-common": "^3.1.3",
-    "@apollo/react-hooks": "^3.1.3",
-    "@charlietango/use-script": "^2.1.0",
+    "@apollo/react-common": "^3.1.4",
+    "@apollo/react-hooks": "^3.1.5",
+    "@charlietango/use-script": "^2.2.0",
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@contentful/rich-text-types": "^13.4.0",
     "@dosomething/forge": "^6.10.0",
     "@dosomething/gateway": "^2.0.1",
     "@emotion/babel-preset-css-prop": "^10.0.27",
-    "@emotion/core": "^10.0.27",
+    "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
-    "@react-pdf/renderer": "^1.6.8",
+    "@react-pdf/renderer": "^1.6.11",
     "@typeform/embed": "^0.12.2",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link": "^1.2.13",
-    "apollo-link-batch-http": "^1.2.13",
-    "apollo-link-context": "^1.0.19",
-    "apollo-link-error": "^1.1.12",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-http": "^1.5.17",
     "apollo-link-persisted-queries": "^0.2.2",
     "babel-jest": "^24.9.0",
     "classnames": "^2.2.6",
@@ -94,21 +94,21 @@
     "dotenv": "^8.2.0",
     "environment-badge": "^1.3.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.3",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
     "eslint-config-prettier": "^2.9.0",
     "fontfaceobserver": "^2.1.0",
     "graphql": "~14.6.0",
-    "graphql-anywhere": "^4.2.6",
-    "graphql-tag": "^2.10.1",
+    "graphql-anywhere": "^4.2.7",
+    "graphql-tag": "^2.11.0",
     "history": "^4.10.1",
     "jest-environment-jsdom": "^24.9.0",
     "jest-environment-jsdom-global": "^1.2.0",
-    "localforage": "^1.7.3",
-    "lodash": "^4.17.19",
+    "localforage": "^1.9.0",
+    "lodash": "^4.17.20",
     "lodash-es": "^4.17.15",
     "markdown-it": "^8.4.0",
-    "markdown-it-anchor": "^5.2.5",
+    "markdown-it-anchor": "^5.3.0",
     "markdown-it-collapsible": "^1.0.0",
     "markdown-it-footnote": "^3.0.2",
     "markdown-it-for-inline": "^0.1.1",
@@ -116,55 +116,56 @@
     "pluralize": "^8.0.0",
     "prop-types": "^15.7.2",
     "query-string": "^5.1.1",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-addons-update": "^15.6.2",
-    "react-apollo": "^3.1.3",
-    "react-dom": "^16.13.1",
+    "react-apollo": "^3.1.5",
+    "react-dom": "^16.14.0",
     "react-error-boundary": "^1.2.5",
-    "react-intersection-observer": "^8.25.2",
+    "react-intersection-observer": "^8.29.1",
     "react-loadable": "^5.4.0",
     "react-media": "^1.10.0",
     "react-portal": "^4.2.1",
     "react-redux": "^6.0.0",
     "react-required-if": "^1.0.3",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-router-prop-types": "^1.0.4",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-router-prop-types": "^1.0.5",
     "react-select": "^3.1.0",
-    "react-test-renderer": "^16.13.1",
+    "react-test-renderer": "^16.14.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sixpack-client": "^2.1.0",
-    "tailwindcss": "^1.2.0",
-    "twin.macro": "^1.0.0-alpha.8",
+    "tailwindcss": "^1.9.5",
+    "twin.macro": "^1.11.0",
     "usa-states": "0.0.5"
   },
   "devDependencies": {
-    "@apollo/react-testing": "^3.1.3",
-    "@babel/core": "^7.9.0",
-    "@babel/preset-flow": "^7.9.0",
+    "@apollo/react-testing": "^3.1.4",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-flow": "^7.12.1",
+    "@cypress/webpack-preprocessor": "^5.4.8",
     "@dosomething/babel-preset": "^3.2.0",
     "@dosomething/eslint-config": "^5.0.1",
     "@dosomething/webpack-config": "^6.0.0",
-    "@testing-library/cypress": "^6.0.0",
-    "@testing-library/dom": "^7.5.5",
-    "@testing-library/jest-dom": "^5.7.0",
-    "@testing-library/react": "^10.0.4",
-    "apollo": "^2.22.0",
-    "autoprefixer": "^9.7.5",
+    "@testing-library/cypress": "^7.0.1",
+    "@testing-library/dom": "7.26.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^10.4.9",
+    "apollo": "^2.31.0",
+    "autoprefixer": "^9.8.6",
     "babel-plugin-macros": "^2.8.0",
-    "bson": "^4.0.4",
-    "contentful-management": "^5.16.0",
-    "cypress": "^3.8.3",
-    "cypress-file-upload": "^3.5.3",
+    "bson": "^4.2.0",
+    "contentful-management": "^5.28.0",
+    "cypress": "^5.4.0",
+    "cypress-file-upload": "^4.1.1",
     "cypress-graphql-mock": "github:DFurnes/cypress-graphql-mock#with-persisted-batch-support",
-    "cypress-multi-reporters": "^1.2.3",
+    "cypress-multi-reporters": "^1.4.0",
     "eslint-loader": "^2.2.1",
-    "eslint-plugin-cypress": "^2.8.1",
+    "eslint-plugin-cypress": "^2.11.2",
     "faker": "^4.1.0",
     "flow-bin": "0.59.0",
-    "graphql-tools": "^4.0.6",
+    "graphql-tools": "^4.0.8",
     "husky": "^2.7.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
@@ -172,17 +173,17 @@
     "minimist": "^1.2.0",
     "mocha": "^6.2.3",
     "mocha-junit-reporter": "^1.23.3",
-    "modernizr": "^3.8.0",
+    "modernizr": "^3.11.3",
     "postcss-loader": "^3.0.0",
     "prettier": "1.18.2",
     "pretty-quick": "^1.11.1",
-    "redux-devtools": "^3.5.0",
-    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools": "^3.7.0",
+    "redux-devtools-dock-monitor": "^1.2.0",
     "redux-devtools-log-monitor": "^1.4.0",
     "turndown": "^5.0.3",
     "webpack": "~4.28.0",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
-    "winston": "^3.2.1"
+    "webpack-bundle-analyzer": "^3.9.0",
+    "webpack-cli": "^3.3.12",
+    "winston": "^3.3.3"
   }
 }
