Add algolia campaigns search feature flag

--- a/.env.example
+++ b/.env.example
@@ -73,6 +73,7 @@ ZENDESK_TOKEN=
 # ==============================================================================
 # Feature Flags
 # ==============================================================================
+DS_ENABLE_ALGOLIA_CAMPAIGNS_SEARCH=
 DS_ENABLE_CAUSE_INTERESTS_PAGE=
 DS_ENABLE_DYNAMIC_CAMPAIGNS_PAGE=
 DS_ENABLE_HIDE_CAMPAIGNS=
