--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "markdown-it-for-inline": "^0.1.1",
     "node-fetch": "^2.6.1",
     "pluralize": "^8.0.0",
+    "pretty-ms": "^7.0.1",
     "prop-types": "^15.7.2",
     "query-string": "^5.1.1",
     "react": "^16.14.0",
