--- a/.env.example
+++ b/.env.example
@@ -75,6 +75,7 @@ ZENDESK_TOKEN=
 # ==============================================================================
 DS_ENABLE_ALGOLIA_CAMPAIGNS_SEARCH=
 DS_ENABLE_CAUSE_INTERESTS_PAGE=
+DS_ENABLE_HOURS_SPENT_IN_VC_CERTIFICATES=
 DS_ENABLE_QUIZ_RESULT_PAGE=
 DS_ENABLE_NPS_SURVEY=
 DS_ENABLE_REFER_FRIENDS_INCENTIVE=
