--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "huddledigital/zendesk-laravel": "^3.2",
     "laravel/framework": "^6.0",
     "predis/predis": "^1.1",
-    "seatgeek/sixpack-php": "^2.1"
+    "seatgeek/sixpack-php": "^2.1",
+    "lcobucci/jwt": "~3.3.3"
   },
   "require-dev": {
     "facade/ignition": "^1.4",
