--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "react-router-prop-types": "^1.0.5",
     "react-select": "^3.2.0",
     "react-test-renderer": "^16.14.0",
+    "react-tiny-popover": "^6.0.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
