--- a/.env.example
+++ b/.env.example
@@ -80,6 +80,7 @@ DS_ENABLE_NPS_SURVEY=
 DS_ENABLE_REFER_FRIENDS_INCENTIVE=
 DS_ENABLE_SITEWIDE_NPS_SURVEY=
 DS_ENABLE_POST_CONFIRMATION_PAGE=
+DS_ENABLE_GRAPHQL_CAMPAIGN_SIGNUP=
 
 # ==============================================================================
 # Site Config
