--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "laravel/framework": "^6.0",
     "lcobucci/jwt": "~3.3.3",
     "phpseclib/phpseclib": "^2.0.31",
+    "predis/predis": "^1.1",
     "seatgeek/sixpack-php": "^2.1"
   },
   "require-dev": {
