Install & use phpredis extension. (#2633)
* Install & use phpredis extension.

* Do we need to specify TLS scheme\?

* Update stream context to _not_ verify Redis TLS cerficate.

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "require": {
     "php": "~7.4.0",
     "ext-newrelic": "*",
+    "ext-redis": "*",
     "barryvdh/laravel-debugbar": "^3.0",
     "contentful/contentful": "^6.0",
     "contentful/laravel": "^7.0",
