--- a/.env.example
+++ b/.env.example
@@ -79,6 +79,7 @@ DS_ENABLE_REFER_FRIENDS_INCENTIVE=
 DS_ENABLE_SITEWIDE_NPS_SURVEY=
 DS_ENABLE_POST_CONFIRMATION_PAGE=
 DS_ENABLE_NEW_ARTICLES_PAGE=
+DS_ENABLE_USER_CAMPAIGNS=
 
 # ==============================================================================
 # Site Config
